<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormDataDiriActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/formCOD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/formDataDiri"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_marginTop="20dp"
            android:text="Silahkan Isi Data Penerima"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="Nama Penerima"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formDataDiri" />

        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Alamat Penerima"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/etNama"
            app:layout_constraintStart_toStartOf="@+id/etNama"
            app:layout_constraintTop_toBottomOf="@+id/etNama" />

        <EditText
            android:id="@+id/etNoHp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="No HP Penerima"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/etAlamat"
            app:layout_constraintStart_toStartOf="@+id/etAlamat"
            app:layout_constraintTop_toBottomOf="@+id/etAlamat" />

        <Button

            android:id="@+id/btnCOD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="COD"
            app:layout_constraintEnd_toStartOf="@+id/btnTransfer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNoHp" />

        <Button
            android:id="@+id/btnTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="57dp"
            android:text="Transfer"
            app:layout_constraintEnd_toEndOf="@+id/etNoHp"
            app:layout_constraintTop_toBottomOf="@+id/etNoHp" />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <LinearLayout
        android:id="@+id/formRekening"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formCOD"
        android:background="@color/white"
        android:visibility="gone">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer_bank"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rek_bri"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rek_bni"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rek_bca"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rek_mandiri"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <Button
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="oke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnOke"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>